fixed refs for wCVI CK

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -8,16 +8,6 @@
 	year = {2016},
 }
 
-@article{dfo_integrated_2016,
-	title = {Integrated {Biological} {Status} of {Southern} {British} {Columbia} {Chinook} {Salmon} (\textit{{Oncorhynchus} tshawytscha}) {Under} the {Wild} {Salmon} {Policy}},
-	abstract = {A workshop entitled “Assessment of Southern British Columbia Chinook Salmon Conservation Units, Benchmarks and Status” was conducted to determine an integrated Wild Salmon Policy (WSP) status for each of the 35 southern BC Chinook Salmon Conservation Units (CU). The status integration method used was similar to that applied to Fraser Sockeye (Grant \& Pestal 2013). A characteristic of southern BC Chinook Salmon CUs that is distinct from the Sockeye Salmon CUs assessed so far is the significant presence of hatchery-origin fish in addition to wild-origin fish in many of the CU area/watersheds.},
-	language = {en},
-	author = {{DFO}},
-	year = {2016},
-	pages = {15},
-	file = {Integrated Biological Status of Southern British C.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\6LUF649R\\Integrated Biological Status of Southern British C.pdf:application/pdf},
-}
-
 @article{dfo_2017_2018,
 	title = {The 2017 {Fraser} {Sockeye} {Salmon} (\textit{{Oncorhynchus} nerka}) integrated biological status re-assessment under the {Wild} {Salmon} {Policy}},
 	abstract = {This SAR reports on the first re-assessment of biological status under the Wild Salmon Policy (WSP). This work was completed for 24 Fraser Sockeye Salmon Conservation Units (CUs) in 2017, which updates the previous statuses for these CUs (DFO 2012).},
@@ -139,6 +129,70 @@
 	pages = {xi + 64 p},
 }
 
+@article{liermann_using_2010,
+	title = {Using accessible watershed size to predict management parameters for {Chinook} salmon, (\textit{{Oncorhynchus}} tshawytscha), populations with little or no spawner-recruit data: a {Bayesian} hierarchical modelling approach},
+	volume = {17},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2400.2009.00719.x},
+	doi = {https://doi.org/10.1111/j.1365-2400.2009.00719.x},
+	abstract = {Abstract Escapement goals for Chinook salmon, Oncorhynchus tshawytscha (Walbaum), populations tend to be highly uncertain due to variability in, and in some cases complete absence of, spawner-recruit data. A previous study of 25 populations from Oregon to Alaska demonstrated that watershed size is a good predictor of unfished equilibrium population size. Here this relationship is further developed by evaluating a series of Bayesian hierarchical models of increasing complexity. The model that performed best included a temporal random walk to account for patterns in the spawner-recruit residuals and life history-specific distributions for the productivity parameter.},
+	number = {1},
+	journal = {Fisheries Management and Ecology},
+	author = {Liermann, M. C. and Sharma, R. and Parken, C. K.},
+	year = {2010},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2400.2009.00719.x},
+	keywords = {capacity, fish-habitat model, hierarchical model, life history, maximum sustainable yield, population dynamics},
+	pages = {40--51},
+}
+
+@techreport{dfo_integrated_2016,
+	title = {Integrated {Biological} {Status} of {Southern} {British} {Columbia} {Chinook} {Salmon} (\textit{{Oncorhynchus}} tshawytscha) under the {Wild} {Salmon} {Policy}},
+	language = {en},
+	number = {Can. Sci. Advis. Sec. Sci. Advis. Rep. 2016/042},
+	author = {{DFO}},
+	year = {2016},
+	pages = {15},
+}
+
+@techreport{withler_genetically_2018,
+	type = {Research {Document}},
+	title = {Genetically {Based} {Targets} for {Enhanced} {Contributions} to {Canadian} {Pacific} {Chinook} {Salmon} {Populations}},
+	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40702285.pdf},
+	number = {2018/019},
+	institution = {Fisheries and Oceans Canada},
+	author = {Withler, R.E. and Bradford, M.J. and Willis, D.M. and Holt, C.A.},
+	year = {2018},
+	pages = {88},
+}
+
+@techreport{parken_habitat-based_2006,
+	title = {Habitat-based methods to estimate escapement goals for data-limited {Chinook} salmon stocks in {British} {Columbia}, 2004},
+	language = {en},
+	number = {Can. Sci. Advis. Sec. Res. Doc. 2006/083},
+	author = {Parken, C.K. and McNicol, R. E. and Irvine, J.R.},
+	year = {2006},
+	pages = {67},
+}
+
+@techreport{dfo_integrated_2021,
+	title = {Integrated {Fisheries} {Management} {Plan} {June} 1, 2021 - {May} 31, 2022, {Salmon} {Southern} {BC}},
+	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40980078.pdf},
+	language = {en},
+	author = {{DFO}},
+	year = {2021},
+	pages = {599},
+}
+
+@techreport{brown_2020_2020,
+	title = {2020 {Summary} of {Abundance} {Data} for {Chinook} {Salmon} (\textit{{Oncorhynchus}} tshawytscha) in {Southern} {British} {Columbia}, {Canada}},
+	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40890041.pdf},
+	language = {en},
+	number = {Can. Tech. Rep. Fish. Aquat. Sci. 3401},
+	author = {Brown, G. S. and Thiess, M. E. and Wor, C. and Holt, C. A. and Patten, B. and Bailey, R. E. and Parken, C. K. and Baillie, S. J. and Candy, J. R. and Willis, D. M. and Hertz, E. and Connors, B. and Pestal, G. P.},
+	year = {2020},
+	pages = {214},
+	file = {Brown et al. - 2020 - 2020 Summary of Abundance Data for Chinook Salmon .pdf:C\:\\Users\\HoltC\\Zotero\\storage\\FUJCLK5Y\\Brown et al. - 2020 - 2020 Summary of Abundance Data for Chinook Salmon .pdf:application/pdf},
+}
+
 @book{r_core_team_r_2021,
 	address = {Vienna, Austria},
 	title = {R {A} {Language} and {Environment} for {Statistical} {Computing}},
@@ -146,6 +200,7 @@
 	publisher = {R Foundation for Statistical Computing},
 	author = {{R Core Team}},
 	year = {2021},
+	file = {R Core Team - 2021 - R A Language and Environment for Statistical Compu.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\J4IZ5B7N\\R Core Team - 2021 - R A Language and Environment for Statistical Compu.pdf:application/pdf},
 }
 
 @article{scheuerell_explicit_2016,
